fixed issue with displaying of selectedlocation and key problem was order of script files in destination.html

--- a/destination.html
+++ b/destination.html
@@ -53,8 +53,9 @@
             </ul>
         </div>
     </nav>
-    <div id="destination">
-        hello
+    <div>
+    <div id="destination"></div>
+    </div>
         <div class="destination-container container-fluid">
         <div class="container-fluid">
             <div class="row">
@@ -126,7 +127,6 @@
             </div>
         </div>
     </div>
-    </div>
     
     <footer class="sticky-footer text-center">
         <div class="container-fluid social-icons">
@@ -148,11 +148,13 @@
             </div>
         </div>
     </footer>
+    <script type="text/javascript" src="assets/js/data.js"></script>
+    <script type="text/javascript" src="assets/js/destination.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
     <script type="text/javascript" src="assets/js/script.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
     <script type="text/javascript">
         (function () {
             emailjs.init("user_uZfhju5blSucDKMUF6PGS");
