added beginning of function to deal with budgets selection

--- a/destinations.html
+++ b/destinations.html
@@ -63,9 +63,9 @@
         </div>
     </div>
     <div id="myBtnContainer">
-        <button class="myBtn current" id="showAll"  onclick="showAll('sun')"> Show all</button>
-        <button class="myBtn" id="budget"  onclick="showBudget('sun')"> Budget</button>
-        <button class="myBtn" id="luxury"  onclick="showLuxury('sun')"> Luxury</button>
+        <button class="myBtn current" id="showAll"  onclick="showAll('all')"> Show all</button>
+        <button class="myBtn" id="budget"  onclick="showBudget('budget')"> Budget</button>
+        <button class="myBtn" id="luxury"  onclick="showLuxury('luxury')"> Luxury</button>
     </div>
     <div id="main" class="container">
         <div class="row" id="destinations">
