--- a/destinations.html
+++ b/destinations.html
@@ -130,7 +130,7 @@
                     </div>
                     <div class="modal-footer">
                         <button class="btn closeBtn" data-dismiss="modal">Close</button>
-                        <button type="submit" class="modalBtn btn">Register Now!</button>
+                        <button type="submit" class="modalBtn btn" data-dismiss="modal">Register Now!</button>
                     </div>
                 </div>
             </form>
