removed data dismiss to allow user message to appear until alternative is found

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </div>
                     <div class="modal-footer">
                         <button class="btn closeBtn" data-dismiss="modal">Close</button>
-                        <button type="submit" class="modalBtn btn" data-dismiss="modal">Register Now!</button>
+                        <button type="submit" class="modalBtn btn">Register Now!</button>
                     </div>
                 </div>
             </form>
