added working alert for both forms and tested to make sure its working correctly

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
                             <input type="text" name="message" class="form-control" id="query-input" placeholder="Ask us something" required>
                         </div>
                         <div class="form-group row my-5">
-                            <button type="submit" class=" myBtn btn-lg btn-info offset-5">Send!</button>
+                            <button type="submit" id="sendContact" class=" myBtn btn-lg btn-info offset-5">Send!</button>
                         </div>
                     </form>
                 </div>
@@ -105,7 +105,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
     </script>
     <script type="text/javascript">
         (function () {
