--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="Enter your description here" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link href="assets/images/favicon.ico" rel="icon" type="image/x-icon" />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Wanderers Way</title>
 </head>
+
+<!-- To call functions when body loads -->
 
 <body onload="loadWelcome(), sunChosen(), snowChosen(), makeOpacity()">
 
@@ -51,7 +54,7 @@
             </ul>
         </div>
     </nav>
-
+<!-- Choice -->
     <div class="container-choice">
         <div class="container my-3">
             <div class="choice-container text-center">
@@ -62,7 +65,6 @@
             </div>
         </div>
     </div>
-
     <main class="container">
         <div class="row">
             <div class="col-4 col-md-4 text-center sun-media " id="sunCard">
@@ -79,7 +81,6 @@
             </div>
         </div>
     </main>
-
     <div class="container">
         <div class="row">
             <div class="register-Btn col-12">
@@ -88,6 +89,8 @@
             </div>
         </div>
     </div>
+
+<!-- Footer -->
 
     <footer class="sticky-footer text-center">
         <div class="container-fluid social-icons">
@@ -110,6 +113,8 @@
         </div>
     </footer>
 
+<!-- Modal -->
+
     <div class="modal" id="register-modal" tabindex="-1" role="dialog" aria-labelledby="register-modal"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -124,15 +129,16 @@
                     <div class="modal-body">
                         <div class="form-group">
                             <label for="enter-email">Email Address</label>
-                            <input type="email" name="emailaddress" class="form-control" id="enter-email" aria-describedby="emailHelp"
-                                placeholder="Please enter your email address..." required>
+                            <input type="email" name="emailaddress" class="form-control" id="enter-email"
+                                aria-describedby="emailHelp" placeholder="Please enter your email address..." required>
                             <small id="emailHelp" class="form-text text-muted">You need this to register for our
                                 platform</small>
                         </div>
                         <div class="form-group">
                             <label for="email-confirm">Please Confirm Your Email address</label>
-                            <input type="email" name="emailaddressConfirmed" class="form-control" id="email-confirm" aria-describedby="emailHelp"
-                                placeholder="Please confirm your email address..." required>
+                            <input type="email" name="emailaddressConfirmed" class="form-control" id="email-confirm"
+                                aria-describedby="emailHelp" placeholder="Please confirm your email address..."
+                                required>
                         </div>
                         <div class="form-group">
                             <label for="enter-password">Password</label>
@@ -154,9 +160,15 @@
         </div>
     </div>
     <script src="assets/js/sendEmail.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
     <script src="assets/js/script.js"></script>
     <script>
