--- a/destinations.html
+++ b/destinations.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="Enter your description here" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link href="assets/images/favicon.ico" rel="icon" type="image/x-icon" />
     <link rel="stylesheet" href="assets/css/style.css">
@@ -51,6 +52,9 @@
             </ul>
         </div>
     </nav>
+
+<!-- Main Content -->
+
     <div class="container text-center mt-3">
         <div class="row legend-cost">
             <div class="col-12">
@@ -60,19 +64,28 @@
             </div>
         </div>
     </div>
+
+<!-- Button Filters -->
+
     <div id="myBtnContainer">
-        <button class="myBtn current" id="showAll"  onclick="showBudget('all')"> Show all</button>
-        <button class="myBtn" id="budget"  onclick="showBudget('budget')"> Budget</button>
-        <button class="myBtn" id="luxury"  onclick="showBudget('luxury')"> Luxury</button>
+        <button class="myBtn current" id="showAll" onclick="showBudget('all')"> Show all</button>
+        <button class="myBtn" id="budget" onclick="showBudget('budget')"> Budget</button>
+        <button class="myBtn" id="luxury" onclick="showBudget('luxury')"> Luxury</button>
     </div>
     <div id="main" class="container">
         <div class="row" id="destinations">
         </div>
     </div>
-    <div class ="register-Btn" >
-         <button type="submit" class="myBtn btn-lg btn-info my-5" data-toggle="modal"
-                data-target="#register-modal">Register Now!</button>
+
+<!-- Register Button -->
+
+    <div class="register-Btn">
+        <button type="submit" class="myBtn btn-lg btn-info my-5" data-toggle="modal"
+            data-target="#register-modal">Register Now!</button>
     </div>
+
+<!-- Footer -->
+
     <footer class="sticky-footer text-center">
         <div class="container-fluid social-icons">
             <div class="row">
@@ -94,6 +107,8 @@
         </div>
     </footer>
 
+<!-- Modal -->
+
     <div class="modal" id="register-modal" tabindex="-1" role="dialog" aria-labelledby="register-modal"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -108,15 +123,16 @@
                     <div class="modal-body">
                         <div class="form-group">
                             <label for="enter-email">Email Address</label>
-                            <input type="email" name="emailaddress" class="form-control" id="enter-email" aria-describedby="emailHelp"
-                                placeholder="Please enter your email address..." required>
+                            <input type="email" name="emailaddress" class="form-control" id="enter-email"
+                                aria-describedby="emailHelp" placeholder="Please enter your email address..." required>
                             <small id="emailHelp" class="form-text text-muted">You need this to register for our
                                 platform</small>
                         </div>
                         <div class="form-group">
                             <label for="email-confirm">Please Confirm Your Email address</label>
-                            <input type="email" name="emailaddressConfirmed" class="form-control" id="email-confirm" aria-describedby="emailHelp"
-                                placeholder="Please confirm your email address..." required>
+                            <input type="email" name="emailaddressConfirmed" class="form-control" id="email-confirm"
+                                aria-describedby="emailHelp" placeholder="Please confirm your email address..."
+                                required>
                         </div>
                         <div class="form-group">
                             <label for="enter-password">Password</label>
@@ -139,9 +155,15 @@
     </div>
     <script src="assets/js/data.js"></script>
     <script src="assets/js/destinations.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
     <script>
