formatted js files

--- a/contact.html
+++ b/contact.html
@@ -87,6 +87,8 @@
         </div>
     </div>
 
+    <!-- Modal -->
+
     <div class="modal" id="contact-modal" tabindex="-1" role="dialog" aria-labelledby="contact-modal"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
