--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
     </nav>
 
-<!-- Choice -->
+    <!-- Choice -->
 
     <div class="container-choice">
         <div class="container my-3">
@@ -92,7 +92,7 @@
         </div>
     </div>
 
-<!-- Footer -->
+    <!-- Footer -->
 
     <footer class="sticky-footer text-center">
         <div class="container-fluid social-icons">
@@ -115,7 +115,7 @@
         </div>
     </footer>
 
-<!-- Modal for registration -->
+    <!-- Modal for registration -->
 
     <div class="modal" id="register-modal" tabindex="-1" role="dialog" aria-labelledby="register-modal"
         aria-hidden="true">
@@ -178,12 +178,11 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button onclick="window.location.href = 'index.html'" class="btn closeBtn" data-dismiss="modal">Close</button>
+                    <button onclick="window.location.reload()" class="btn closeBtn" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
     </div>
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
