--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,9 @@
                         <div class="form-group">
                             <label for="email-input">Email Address</label>
                             <input type="email" name="emailaddress" class="form-control" id="email-input"
-                                placeholder="Enter your email address" pattern= "^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" aria-describedby="emailHelp" required>
+                                placeholder="Enter your email address"
+                                pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" aria-describedby="emailHelp"
+                                required>
                         </div>
                         <div class="form-group">
                             <label for="query-input">Your Question</label>
@@ -102,7 +104,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button onclick="window.location.href = 'index.html'" class="btn closeBtn" data-dismiss="modal">Close</button>
+                    <button onclick="window.location.href = 'index.html'" class="btn closeBtn"
+                        data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
