--- a/contact.html
+++ b/contact.html
@@ -72,8 +72,7 @@
                             <label for="email-input">Email Address</label>
                             <input type="email" name="emailaddress" class="form-control" id="email-input"
                                 placeholder="Enter your email address"
-                                pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" aria-describedby="emailHelp"
-                                required>
+                                pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
                         </div>
                         <div class="form-group">
                             <label for="query-input">Your Question</label>
