added pattern to email in modal to decrease chance of user input error

--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
                         <div class="form-group">
                             <label for="enter-email">Email Address</label>
                             <input type="email" name="emailaddress" class="form-control" id="enter-email"
-                                aria-describedby="emailHelp" placeholder="Please enter your email address..." required>
+                                aria-describedby="emailHelp" placeholder="Please enter your email address..."
+                                pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
                             <small id="emailHelp" class="form-text text-muted">You need this to register for our
                                 platform</small>
                         </div>
