added toast for contacct form error inputs

--- a/contact.html
+++ b/contact.html
@@ -82,11 +82,23 @@
                         <div class="form-group row my-5">
                             <button type="submit" id="contact" class="myBtn btn-lg btn-info offset-5">Send!</button>
                         </div>
+
+                        <!-- Error Toast -->
+
+                        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                            <div class="toast-header">
+                                <h4>Error</h4>
+                            </div>
+                            <div class="toast-body">
+                                All fields must be filled out!
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
+
 
     <!-- Footer -->
 
